--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,7 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="view_ingredients">View Ingredients</string>
     <string name="steps_for_preparation">Steps for Preparation</string>
+    <string name="ingredients">Ingredients</string>
+    <string name="ingredient_name_header">Ingredient Name</string>
+    <string name="ingredient_quantity_header">Quantity</string>
 </resources>
