--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,6 @@
     <string name="ingredient_quantity_header">Quantity</string>
     <string name="button_label_previous_step">Previous Step</string>
     <string name="button_label_next_step">Next Step</string>
+    <string name="appwidget_text">Ingredients</string>
+    <string name="add_widget">Add widget</string>
 </resources>
